message SimpleConnectArgs {
	optional string gameId = 1;
	optional string usernameOrEmail = 2;
	optional string password = 3;
	repeated string playerInsightSegments = 4;
	optional string clientAPI = 5;
	repeated KeyValuePair clientInfo = 6;
}

message SimpleConnectOutput {
	optional string token = 1;
	optional string userId = 2;
	optional bool showBranding = 3;
	optional string gameFSRedirectMap = 4;
	optional string partnerId = 5;
}
